--- a/web/index.html
+++ b/web/index.html
@@ -26,22 +26,6 @@
                         </td>
                     </tr>
                     <tr>
-                        <td style="padding-right: 10px;">Phương pháp:</td>
-                        <td>
-                            <select name="mea" id="mea">
-                                <option value="1">Jaro Winkler</option>
-                                <option value="2">Levenshtein</option>
-                                <option value="3">Mahattan</option>
-                                <option value="4">Euclide</option>
-                                <option value="5">Cosin</option>
-                                <option value="6">NGram</option>
-                                <option value="7">Matching</option>
-                                <option value="8">Dice</option>
-                                <option value="9">Jaccard</option>
-                            </select>
-                        </td>
-                    </tr>
-                    <tr>
                         <td colspan="2" align="center">
                             <input type="button" class="button" id="btnSubmit" value="Tìm kiếm"/>
                         </td>
@@ -51,10 +35,7 @@
                 <!--<input type="text" name="action" id="action" hidden="true" value="getCommonQuestions" />-->
                 <!--        </form>-->
 
-                <div style="width: 90%;">
-                    <table id="resultTable" class='table table-bordered table-striped table-sm table-hover'>
-
-                    </table>
+                <div style="width: 80%;" id="answer">
                 </div>
             </div>
         </div>
