commit by Thien

--- a/web/index.html
+++ b/web/index.html
@@ -1,44 +1,57 @@
 <!DOCTYPE html>
 <html>
 
-    <head>
-        <title>Question Answering</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/bootstrap-theme.min.css" />
-        <link rel="stylesheet" href="css/bootstrap.min.css" />
-        <link rel="stylesheet" href="css/style.css"/>
-        <script src="js/jquery-2.1.4.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <link rel="stylesheet" href="css/style.css" />
-        <script src="js/index.js"></script>
-    </head>
+<head>
+    <title>Question Answering</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css"/>
+    <link rel="stylesheet" href="css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
+    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/style.css"/>
+    <script src="js/index.js"></script>
+</head>
 
-    <body>
-        <div class="container-fluid">
-            <div align='center'>
-                <!--        <form method="POST" action="SimilarityQuestion">-->
-                <table style="margin-bottom: 50px;">
-                    <tr style="text-align: right;">
-                        <td style="padding-right: 10px;">Câu hỏi:</td>
-                        <td>
-                            <textarea name="question" id="question" rows="5" cols="60" placeholder="Mời nhập câu hỏi!"></textarea>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td colspan="2" align="center">
-                            <input type="button" class="button" id="btnSubmit" value="Tìm kiếm"/>
-                        </td>
-                    </tr>
-                </table>
-                <!--<input type="text" name="abs2Use" id="abs2Use" value='[{"abs": 1}]' hidden="true" />-->
-                <!--<input type="text" name="action" id="action" hidden="true" value="getCommonQuestions" />-->
-                <!--        </form>-->
-
-                <div style="width: 80%;" id="answer">
+<body>
+<div>
+    <img src="images/halong.jpg" alt="" style="visibility: hidden">
+    <div>
+        <div class="intro container-fluid text-center">
+            <h1>Học Viện Công Nghệ Bưu Chính Viễn Thông</h1>
+            <h1>Khoa Công nghệ Thông tin</h1>
+            <h1>Hệ thống trả lời tự động luật giao thông</h1>
+            <div class="display-table col-md-offset-2 col-md-8">
+                <div class="display-row">
+                    <div class="display-cell col-md-6 text-right">Giảng viên hướng dẫn</div>
+                    <div class="display-cell col-md-6 text-left">TS. Ngô xuân Bách</div>
+                </div>
+                <div class="display-row">
+                    <div class="display-cell col-md-6 text-right">Sinh viên thực hiện:</div>
+                    <div class="display-cell col-md-6 text-left">Lê Thị Ngọc Châm</div>
+                </div>
+                <div class="display-row">
+                    <div class="display-cell col-md-6"></div>
+                    <div class="display-cell col-md-6 text-left">Trần Hà Ngọc Thiện</div>
                 </div>
             </div>
         </div>
-    </body>
+        <div class="container-fluid">
+            <div class="input col-md-12 col-sm-12" style="margin-bottom: 50px;">
+                <div class="col-md-6 col-md-offset-2">
+                    <input name="question" id="question" class="form-control"
+                           placeholder="Mời nhập câu hỏi!"/>
+                </div>
+                <div class="col-md-4">
+                    <input type="button" class="button pull-left" id="btnSubmit" value="Tìm kiếm"/>
+                </div>
+            </div>
+            <div id="answer" class="text-center">
+            </div>
+        </div>
+    </div>
+</div>
+</body>
 
 </html>
