--- a/web/test.html
+++ b/web/test.html
@@ -19,6 +19,8 @@
     <img src="images/halong.jpg" alt="" style="visibility: hidden">
     <div>
         <div class="intro container-fluid text-center">
+            <h1>Học Viện Công Nghệ Bưu Chính Viễn Thông</h1>
+            <h1>Khoa Công nghệ Thông tin</h1>
             <h1>Hệ thống trả lời tự động luật giao thông</h1>
             <div class="display-table col-md-offset-2 col-md-8">
                 <div class="display-row">
@@ -38,7 +40,7 @@
         <div class="container-fluid">
             <div class="input col-md-12 col-sm-12" style="margin-bottom: 50px;">
                 <div class="col-md-6 col-md-offset-2">
-                    <input name="question" id="question" type="text" class="form-control"
+                    <input name="question" id="question" class="form-control"
                            placeholder="Mời nhập câu hỏi!"/>
                 </div>
                 <div class="col-md-4">
@@ -48,9 +50,10 @@
             <div id="answer" class="text-center">
             </div>
             <div id="confirm" class="text-center">
-                <p>Câu trả lời này có chấp nhận được không?</p>
-                <button id="btn-yes" class="btn btn-success">Yes</button>
-                <button id="btn-no" class="btn btn-danger">No</button>
+                <p>Mức độ hài lòng về câu trả lời?</p>
+                <button id="btn-yes" class="btn btn-success">Tốt</button>
+                <button id="btn-ok" class="btn btn-primary">Ổn</button>
+                <button id="btn-no" class="btn btn-danger">Tệ</button>
             </div>
         </div>
     </div>
