--- a/web/index.html
+++ b/web/index.html
@@ -12,6 +12,7 @@
     <script src="js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/style.css"/>
     <script src="js/index.js"></script>
+    <script src="https://www.w3counter.com/tracker.js?id=112103"></script>
 </head>
 
 <body>
