--- a/web/test.html
+++ b/web/test.html
@@ -12,6 +12,7 @@
     <script src="js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/style.css"/>
     <script src="js/index.js"></script>
+    <script src="https://www.w3counter.com/tracker.js?id=112103"></script>
 </head>
 
 <body>
@@ -55,6 +56,7 @@
                 <button id="btn-ok" class="btn btn-primary">Ổn</button>
                 <button id="btn-no" class="btn btn-danger">Tệ</button>
             </div>
+            <div id="thanks" class="text-center">Cảm ơn đã đánh giá phản hồi câu trả lời của hệ thống!</div>
         </div>
     </div>
 </div>
