change answer displaying

--- a/web/test.html
+++ b/web/test.html
@@ -17,7 +17,7 @@
 
 <body>
 <div>
-    <img src="images/halong.jpg" alt="" style="visibility: hidden">
+    <img src="images/halong.jpg" alt="" style="visibility: hidden;height: 100%;">
     <div>
         <div class="intro container-fluid text-center">
             <h1>Học Viện Công Nghệ Bưu Chính Viễn Thông</h1>
