finish added info

--- a/web/index.html
+++ b/web/index.html
@@ -45,17 +45,11 @@
                 </div>
                 <div class="col-md-4">
                     <input type="button" class="button pull-left" id="btnSubmit" value="Tìm kiếm"/>
+                    <input type="button" class="button" id="refresh" value="Làm mới"/>
                 </div>
             </div>
             <div class="added-info col-md-12 col-sm-12">
-                <p>Thiếu thông tin, hãy nhập thêm thông tin vào bên dưới!</p>
-                <input name="tv" id="tv" class="form-control"
-                       placeholder="Loại phương tiện"/>
-                <input name="qt" id="qt" class="form-control"
-                       placeholder="Câu hỏi"/>
-                <input name="a" id="a" class="form-control"
-                       placeholder="Hành động"/>
-                <input type="button" class="button" id="re-submit" value="Tiếp tục tìm"/>
+                <p>Thiếu thông tin, hãy nhập thêm thông tin vào bên trên hoặc nhấn làm mới để hỏi câu khác!</p>
             </div>
             <div id="answer" class="text-center">
             </div>
