not finish send base ajax

--- a/web/index.html
+++ b/web/index.html
@@ -51,8 +51,8 @@
             <div class="added-info col-md-12 col-sm-12">
                 <p>Thiếu thông tin, hãy nhập thêm thông tin vào bên trên hoặc nhấn làm mới để hỏi câu khác!</p>
             </div>
-            <div id="answer" class="text-center">
-            </div>
+            <div id="answer" class="text-center"></div>
+            <div id="base" class="text-center"></div>
         </div>
     </div>
 </div>
