--- a/web/index.html
+++ b/web/index.html
@@ -19,22 +19,36 @@
 <div>
     <div class="row">
         <div class="intro container-fluid text-center">
+            <!--<h1>Học Viện Công Nghệ Bưu Chính Viễn Thông</h1>-->
+            <!--<h1>Khoa Công nghệ Thông tin</h1>-->
+            <!--<h1>Hệ thống trả lời tự động luật giao thông</h1>-->
+            <h1>Bộ Thông Tin và Truyền Thông</h1>
             <h1>Học Viện Công Nghệ Bưu Chính Viễn Thông</h1>
-            <h1>Khoa Công nghệ Thông tin</h1>
-            <h1>Hệ thống trả lời tự động luật giao thông</h1>
+            <h1>Nhiệm Vụ Khoa Học và Công Nghệ Cấp Bộ</h1>
             <div class="display-table col-md-offset-2 col-md-8">
-                <div class="display-row">
-                    <div class="display-cell col-md-6 text-right">Giảng viên hướng dẫn</div>
-                    <div class="display-cell col-md-6 text-left">TS. Ngô xuân Bách</div>
+                <div class="display-row">Nghiên cứu xây dựng hệ thống giải đáp luật giao thông sử dụng ngôn ngữ tự
+                    nhiên
                 </div>
                 <div class="display-row">
-                    <div class="display-cell col-md-6 text-right">Sinh viên thực hiện:</div>
-                    <div class="display-cell col-md-6 text-left">Lê Thị Ngọc Châm</div>
+                    <div class="display-cell col-md-6 text-right">Mã số:</div>
+                    <div class="display-cell col-md-6 text-left">ĐT.024/17</div>
                 </div>
                 <div class="display-row">
-                    <div class="display-cell col-md-6"></div>
-                    <div class="display-cell col-md-6 text-left">Trần Hà Ngọc Thiện</div>
+                    <div class="display-cell col-md-6 text-right">Chủ trì:</div>
+                    <div class="display-cell col-md-6 text-left">TS. Ngô Xuân Bách</div>
                 </div>
+                <!--<div class="display-row">-->
+                <!--<div class="display-cell col-md-6 text-right">Giảng viên hướng dẫn</div>-->
+                <!--<div class="display-cell col-md-6 text-left">TS. Ngô xuân Bách</div>-->
+                <!--</div>-->
+                <!--<div class="display-row">-->
+                <!--<div class="display-cell col-md-6 text-right">Sinh viên thực hiện:</div>-->
+                <!--<div class="display-cell col-md-6 text-left">Lê Thị Ngọc Châm</div>-->
+                <!--</div>-->
+                <!--<div class="display-row">-->
+                <!--<div class="display-cell col-md-6"></div>-->
+                <!--<div class="display-cell col-md-6 text-left">Trần Hà Ngọc Thiện</div>-->
+                <!--</div>-->
             </div>
         </div>
         <div class="container-fluid">
