--- a/web/index.html
+++ b/web/index.html
@@ -22,12 +22,13 @@
             <!--<h1>Học Viện Công Nghệ Bưu Chính Viễn Thông</h1>-->
             <!--<h1>Khoa Công nghệ Thông tin</h1>-->
             <!--<h1>Hệ thống trả lời tự động luật giao thông</h1>-->
-            <h1>Bộ Thông Tin và Truyền Thông</h1>
-            <h1>Học Viện Công Nghệ Bưu Chính Viễn Thông</h1>
-            <h1>Nhiệm Vụ Khoa Học và Công Nghệ Cấp Bộ</h1>
+            <h2>Bộ Thông Tin và Truyền Thông</h2>
+            <h2>Học Viện Công Nghệ Bưu Chính Viễn Thông</h2>
             <div class="display-table col-md-offset-2 col-md-8">
-                <div class="display-row">Nghiên cứu xây dựng hệ thống giải đáp luật giao thông sử dụng ngôn ngữ tự
-                    nhiên
+                <div class="display-row">
+                    <h2 style="color: brown; font-weight: bold">Nhiệm Vụ Khoa Học và Công Nghệ Cấp Bộ</h2>
+                    <h2>Nghiên cứu xây dựng hệ thống giải đáp luật giao thông sử dụng ngôn ngữ tự
+                    nhiên</h2>
                 </div>
                 <div class="display-row">
                     <div class="display-cell col-md-6 text-right">Mã số:</div>
@@ -66,7 +67,9 @@
                 <p>Thiếu thông tin, hãy nhập thêm thông tin vào bên trên hoặc nhấn làm mới để hỏi câu khác!</p>
             </div>
             <div id="answer" class="text-center"></div>
-            <div id="base" class="text-center"></div>
+            <div id="base" class="text-center col-md-12 col-sm-12">
+                <textarea class="form-control" rows="5"></textarea>
+            </div>
         </div>
     </div>
 </div>
