--- a/web/index.html
+++ b/web/index.html
@@ -26,8 +26,8 @@
             <h2>Học Viện Công Nghệ Bưu Chính Viễn Thông</h2>
             <div class="display-table col-md-offset-2 col-md-8">
                 <div class="display-row">
-                    <h2 style="color: brown; font-weight: bold">Nhiệm Vụ Khoa Học và Công Nghệ Cấp Bộ</h2>
-                    <h2>Nghiên cứu xây dựng hệ thống giải đáp luật giao thông sử dụng ngôn ngữ tự
+                    <h2 style="color: white">Nhiệm Vụ Khoa Học và Công Nghệ Cấp Bộ</h2>
+                    <h2 style="color: #EEF36F; font-weight: bold">Nghiên cứu xây dựng hệ thống giải đáp luật giao thông sử dụng ngôn ngữ tự
                     nhiên</h2>
                 </div>
                 <div class="display-row">
