--- a/web/index.html
+++ b/web/index.html
@@ -69,6 +69,7 @@
             <div id="answer" class="text-center"></div>
             <div id="base" class="text-center col-md-12 col-sm-12">
                 <textarea class="form-control" rows="5"></textarea>
+                <table class="table table-bordered table-hover text-justify"></table>
             </div>
         </div>
     </div>
