--- a/web/index.html
+++ b/web/index.html
@@ -67,7 +67,8 @@
                 <p>Thiếu thông tin, hãy nhập thêm thông tin vào bên trên hoặc nhấn làm mới để hỏi câu khác!</p>
             </div>
             <div id="answer" class="text-center"></div>
-            <div id="base" class="text-center col-md-12 col-sm-12">
+            <div id="base" class="text-center">
+                <p class="hidden">Đang lấy thông tin...</p>
                 <textarea class="form-control" rows="5"></textarea>
                 <table class="table table-bordered table-hover text-justify"></table>
             </div>
