--- a/web/index.html
+++ b/web/index.html
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <div class="added-info col-md-12 col-sm-12">
-                <p>Thiếu thông tin, hãy nhập thêm thông tin vào bên trên hoặc nhấn làm mới để hỏi câu khác!</p>
+                <p>Bạn hãy nhập thêm thông tin cho câu hỏi hoặc nhấn làm mới để đặt câu hỏi khác!</p>
             </div>
             <div id="answer" class="text-center"></div>
             <div id="base" class="text-center">
