--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css"/>
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" href="css/style.css"/>
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -42,6 +43,7 @@
                 <div class="col-md-6 col-md-offset-2">
                     <input name="question" id="question" class="form-control"
                            placeholder="Mời nhập câu hỏi!"/>
+                    <a id="speech" class="fa fa-microphone" style="font-size: 18px;"></a>
                 </div>
                 <div class="col-md-4">
                     <input type="button" class="button pull-left" id="btnSubmit" value="Tìm kiếm"/>
