--- a/web/index.html
+++ b/web/index.html
@@ -9,11 +9,12 @@
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" href="css/style.css"/>
-    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/style.css"/>
     <script src="js/index.js"></script>
     <script src="https://www.w3counter.com/tracker.js?id=112103"></script>
+    <link rel="icon" href="favicon-96x96.png"/>
 </head>
 
 <body>
