--- a/web/index.html
+++ b/web/index.html
@@ -21,9 +21,9 @@
 <div>
     <div class="row">
         <div class="intro container-fluid text-center">
-<!--            <h1>Học Viện Công Nghệ Bưu Chính Viễn Thông</h1>
-            <h1>Khoa Công nghệ Thông tin</h1>
-            <h1 style="color: #EEF36F; font-weight: bold">Hệ thống trả lời tự động luật giao thông</h1>
+            <h1 style="color: #C12E4F;">Học Viện Công Nghệ Bưu Chính Viễn Thông</h1>
+            <h1>Khoa Công nghệ Thông tin 1</h1>
+            <h1 style="color: #EEF36F; font-weight: bold">Hệ thống trả lời câu hỏi luật giao thông tiếng Việt</h1>
             <div class="display-table col-md-offset-2 col-md-8">
                 <div class="display-row">
                     <div class="display-cell col-md-6 text-right">Giảng viên hướng dẫn</div>
@@ -37,8 +37,8 @@
                     <div class="display-cell col-md-6"></div>
                     <div class="display-cell col-md-6 text-left">Trần Hà Ngọc Thiện</div>
                 </div>
-            </div>-->
-            <h1>Bộ Thông Tin và Truyền Thông</h1>
+            </div>
+<!--            <h1>Bộ Thông Tin và Truyền Thông</h1>
             <h1>Học Viện Công Nghệ Bưu Chính Viễn Thông</h1>
             <h1 style="color: #C12E4F; font-weight: bold">Nhiệm Vụ Khoa Học và Công Nghệ Cấp Bộ</h1>
             <h1 style="color: #EEF36F; font-weight: bold">Nghiên cứu xây dựng hệ thống giải đáp luật giao thông sử dụng ngôn ngữ tự nhiên</h1>
@@ -51,7 +51,7 @@
                     <div class="display-cell col-md-6 text-right">Chủ trì:</div>
                     <div class="display-cell col-md-6 text-left">TS. Ngô Xuân Bách</div>
                 </div>
-            </div>
+            </div>-->
         </div>
         <div class="container-fluid">
             <div class="input col-md-12 col-sm-12" style="margin-bottom: 50px;">
