--- a/web/test.html
+++ b/web/test.html
@@ -21,9 +21,9 @@
 <div>
     <div class="row">
         <div class="intro container-fluid text-center">
-            <h1>Học Viện Công Nghệ Bưu Chính Viễn Thông</h1>
-            <h1>Khoa Công nghệ Thông tin</h1>
-            <h1 style="color: #EEF36F; font-weight: bold">Hệ thống trả lời tự động luật giao thông</h1>
+            <h1 style="color: #C12E4F;">Học Viện Công Nghệ Bưu Chính Viễn Thông</h1>
+            <h1>Khoa Công nghệ Thông tin 1</h1>
+            <h1 style="color: #EEF36F; font-weight: bold">Hệ thống trả lời câu hỏi luật giao thông tiếng Việt</h1>
             <div class="display-table col-md-offset-2 col-md-8">
                 <div class="display-row">
                     <div class="display-cell col-md-6 text-right">Giảng viên hướng dẫn</div>
